--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "description": "Final For CIS Class",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
+    "local": "nodemon -e js server.js",
     "server": "nodemon server.js",
     "dev": "webpack-dev-server"
   },
   "author": "Adrian Calvache",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.13",
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "google-map-react": "^2.1.9",
     "mongoose": "^5.11.5",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
