--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon server.js",
     "local": "nodemon -e js server.js",
     "server": "nodemon server.js",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "build": "webpack"
   },
   "author": "Adrian Calvache",
   "license": "ISC",
@@ -24,7 +25,8 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "webpack-bundle-size-analyzer": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
